evidence_library/EC2/regions/ap-northeast-2/allSecurityGroups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-031850b0200277973",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-07d44c5512a08912f",
            "SecurityGroupArn": "arn:aws:ec2:ap-northeast-2:111111111111:security-group/sg-031850b0200277973",
            "OwnerId": "111111111111",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "111111111111",
                            "GroupId": "sg-031850b0200277973"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ],
    "ResponseMetadata": {
        "RequestId": "8249ce74-99ce-47cb-9d0d-4088f4936ee3",
        "HTTPStatusCode": 200,
        "HTTPHeaders": {
            "x-amzn-requestid": "8249ce74-99ce-47cb-9d0d-4088f4936ee3",
            "cache-control": "no-cache, no-store",
            "strict-transport-security": "max-age=31536000; includeSubDomains",
            "content-type": "text/xml;charset=UTF-8",
            "content-length": "965",
            "date": "Fri, 06 Feb 2026 16:25:09 GMT",
            "server": "AmazonEC2"
        },
        "RetryAttempts": 0
    }
}
